# harness-locate

./: .gitignore  Cargo.toml  HARNESS_SPEC.md  README.md
.beads/: .gitignore  interactions.jsonl  issues.jsonl
.githooks/: post-merge  pre-commit
.github/workflows/: ci.yml
crates/farrier/src/: discovery.rs  error.rs
crates/harness-locate/: Cargo.toml  README.md
crates/harness-locate/src/: error.rs  lib.rs  mcp.rs  types.rs  validation.rs
crates/harness-locate/src/harness/: claude_code.rs  copilot_cli.rs  crush.rs  goose.rs  mod.rs
crates/skills-locate/: Cargo.toml
crates/skills-locate/src/: discovery.rs  fetch.rs  github.rs  lib.rs  marketplace.rs  plugin.rs  types.rs
crates/skills-locate/src/component/: mod.rs  python.rs
scripts/: install-git-hooks.sh
src/: error.rs  harness.rs  lib.rs  mcp.rs  skill.rs  types.rs  validation.rs
src/harness/: amp_code.rs  claude_code.rs  goose.rs  mod.rs  opencode.rs
