[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/neiii/harness-locate"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
home = "0.5"
which = "7"
url = "2"
ureq = "3"
zip = "2"

# Internal crates
harness-locate = { path = "crates/harness-locate" }
skills-locate = { path = "crates/skills-locate" }
