[package]
name = "harness-locate"
version = "0.2.4"
edition = "2024"

description = "Cross-platform library for configuration, path discovery and MCP server management for agentic code harnesses (Claude Code, OpenCode, Goose, AMP Code)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/neiii/harness-locate"
keywords = ["ai", "mcp", "configuration", "llm", "agent"]
categories = ["development-tools", "config", "filesystem"]

[dependencies]
home = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.147"
serde_yaml = "0.9"
thiserror = "2"
which = "7"
url = "2"

[dev-dependencies]
