[package]
name = "skills-locate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Skill discovery and fetching for AI coding agents"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
